zitadel/kpt/zitadel/service.yaml
# Source: zitadel/charts/zitadel/templates/service.yaml
apiVersion: v1 # Source: zitadel/charts/zitadel/templates/service.yaml
kind: Service
metadata:
  name: zitadel
  annotations:
    mesh.traefik.io/scheme: h2c
    mesh.traefik.io/traffic-type: http
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
  labels:
    helm.sh/chart: zitadel-3.3.2
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
    app.kubernetes.io/version: "v2.8.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http2-server
    appProtocol: http2
  selector:
    app.kubernetes.io/name: zitadel
    app.kubernetes.io/instance: zitadel
