zitadel/kpt/zitadel/ingress-route.yaml
# Source: zitadel/templates/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1 # Source: zitadel/templates/ingress-route.yaml
kind: IngressRoute
metadata:
  name: zitadel
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostRegexp(`auth.{suffix:.*}`)
    kind: Rule
    services:
    - kind: Service
      name: zitadel
      port: 8080
      scheme: h2c
      passHostHeader: true
      #serversTransport: zitadel
  tls: {}
